Fix issue with text overflowing its container
Also add media query to hide featured image div when window shrinks
below certain point.

--- a/css/main.css
+++ b/css/main.css
@@ -57,8 +57,9 @@ header img {
 }
 
 #skills {
-	height: 437px;
-	padding-top: 75px;	
+	height: auto;
+	padding-top: 75px;
+	padding-bottom: 90px;	
 }
 
 #featured {
@@ -198,4 +199,11 @@ nav a:hover {
 
 .tertiary_btn:hover {
 	background-color: #4ba8d2;
+}
+
+/* media query to hide featured image */
+@media (max-width: 991px) {
+  #featuredImage {
+	  display: none;
+  }
 }
